fixed css textarea problem added nowrap for main form td
git-svn-id: http://developer.marklogic.com/svn/cq/trunk@297 e04f4502-82db-0310-b1af-f799f365da79

--- a/cq.css
+++ b/cq.css
@@ -32,9 +32,6 @@ textarea
 {
   font-family: mono-space;
   font-family: monospace !important;
-/*
-  font-size: small;
-*/
 }
 
 table 
